Change log started October 2009.

October 2009
================================================================================
 - Use simplejson so json.py can be removed.